<resources>
    <string name="app_name">Biogi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_email">帳號</string>
    <string name="hint_password">密碼</string>
    <string name="action_settings">Settings</string>
    <string name="btn_login">登入</string>
    <string name="btn_register">忘記密碼</string>
    <string name="now_password">現在的密碼</string>
    <string name="new_password">新密碼</string>
    <string name="agiain_password">再次輸入新密碼</string>
    <string name="name">姓名</string>
    <string name="sex">性別</string>
    <string name="birthday">出生年月日</string>
    <string name="phone">電話</string>
    <string name="cellphone">手機</string>
    <string name="mail">電子郵件</string>

    <string name="err_msg_name">請輸入帳號</string>
    <string name="err_msg_password">請輸入密碼</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
