<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/measureitem"
    tools:context=".homepage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/memberlayout"
        android:weightSum="1">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_gravity="center"
            android:id="@+id/itemname"
            android:hint="@string/name"/>
          <!--  旁邊加上圖片android:drawableLeft="@drawable/ic_compose"-->

        <EditText
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_gravity="center"
            android:id="@+id/sex"
            android:hint="@string/sex"/>

        <EditText
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:layout_gravity="center"
            android:id="@+id/birthday"
            android:hint="@string/birthday"/>
        <EditText
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:layout_gravity="center"
            android:id="@+id/phone"
            android:hint="@string/phone"/>
        <EditText
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:layout_gravity="center"
            android:id="@+id/cellphone"
            android:hint="@string/cellphone"/>

        <EditText
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_gravity="center"
            android:id="@+id/mail"
            android:hint="@string/mail"/>



    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
