<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/measureitem"
    tools:context=".homepage">



    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/memberLayout"
        >


        <EditText
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_gravity="center"
            android:id="@+id/now_password"
            android:hint="@string/now_password"/>

        <EditText
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingTop="30dp"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_gravity="center"
            android:id="@+id/new_password"
            android:hint="@string/new_password"/>

        <EditText
            android:id="@+id/inputpas"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/agiain_password"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:padding="10dp"
            android:paddingTop="30dp"
            android:singleLine="true"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="確認更改"
            android:id="@+id/input"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>

